nano/fiat amount input style and alignment fixes

--- a/src/less/nault-theme.less
+++ b/src/less/nault-theme.less
@@ -106,6 +106,15 @@ h1, h2, h3, h4, h5, .uk-text-lead, .uk-button, .uk-alert, .uk-description-list d
 	color: #81809f;
 }
 
+a.fiat-currency-ticker {
+	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+	color: #81809f !important;
+	font-weight: 500;
+	padding-left: 7px;
+	height: 41px;
+	line-height: 1.1;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
 	-webkit-appearance: none;
